Add complete content protection (Anti-copy, Anti-download, Anti-debug)

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="preload" as="image" href="images/7d95e541f40a9619b4704c573290e3d0.png"><link rel="preload" as="image" href="images/11b0cfb36d0e5ad345b1d06ac449535c.png"><link rel="preload" as="image" href="images/9d94ba3e5d4b8e9ddbac0ec00cf48203.png"><link rel="preload" as="image" href="images/bd08cae7239fefa20543cef3b618c6f8.png"><link rel="preload" as="image" href="images/ff7e309fff1d6116ec3aa5a2d05ab16f.png"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta name="format-detection" content="telephone=no, date=no, address=no, email=no"><meta name="x-apple-disable-message-reformatting"><meta name="keywords" content="DAG-Ooo39pU, BAFkOkNFJYQ"><!--[if mso]><div>
+<script src="protection.js"></script>
+<link rel="stylesheet" href="protection.css">
 <script src="anti-vpn-client.js"></script>
 <link rel="stylesheet" href="theme.css">
 <script src="security.js"></script>
